--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
